# aml-agent-app

./: .gitignore  README.md
backend/: db.py  main.py  pyproject.toml  streaming.py
backend/aml_agent/: agent.py  config.py  models.py  prompts.py  report_html.py
backend/aml_agent/tools/: kb_search.py  sql_database.py  web_search.py
deploy/: nginx-amlagent.conf  realtimeaml.service  setup.sh
frontend/: index.html
