[project]
name = "aml-agent-demo"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "sqlalchemy>=2.0",
    "sqlglot>=20.0",
    "pydantic>=2.0",
    "weaviate-client>=4.20.4",
]

[project.scripts]
serve = "main:main"
